# effetune

./: .gitattributes  .gitignore  404.html  AGENTS.md  BUILD.md  LICENSE  README.md  SECURITY.md  _config.yml  code_review.md  effetune-library.css  effetune-mobile.css  effetune.css  effetune.html  eslint.config.mjs  manifest.json  package-lock.json  package.json  robots.txt  sw-precache.js  sw.js
dsp/: .gitignore  CMakeLists.txt  README.md  exports.txt  registry.inc
dsp/cmake/: wasm-toolchain.cmake
dsp/core/: abi.cpp  allocation_guard.cpp  allocation_guard.h  arena.cpp  arena.h  design_fft.cpp  engine.cpp  engine.h  partitioned_convolver.cpp  registry.cpp  registry.h  telemetry.cpp
dsp/experiments/long_convolution/: main.cpp  prototype.cpp  prototype.h  run.mjs  worker-exports.txt  worker-roundtrip.mjs  worker-wasm-offload-comparator.mjs  worker_api.cpp
dsp/experiments/long_convolution/results/: 8ch-48k-2s-amortized-native-release.json  8ch-48k-2s-amortized-simd.json  8ch-48k-2s-amortized-wasm.json  8ch-96k-auto-2s-amortized-native-release.json  8ch-96k-auto-2s-amortized-simd.json  8ch-96k-auto-2s-amortized-wasm.json  accuracy-amortized-native.json  change-policy-48k-stereo-10s-amortized-native-release.json  change-policy-48k-stereo-10s-amortized-simd.json  change-policy-48k-stereo-10s-amortized-wasm.json  co-resident-96k-auto-10s-amortized-native-release.json  co-resident-96k-auto-10s-amortized-simd.json  co-resident-96k-auto-10s-amortized-wasm.json  stereo-48k-10s-amortized-native-release.json  stereo-48k-10s-amortized-simd.json  stereo-48k-10s-amortized-wasm.json  stereo-96k-auto-10s-amortized-native-release.json  stereo-96k-auto-10s-amortized-simd.json  stereo-96k-auto-10s-amortized-wasm.json  stereo-96k-full-10s-amortized-native-release.json  stereo-96k-full-10s-amortized-simd.json  stereo-96k-full-10s-amortized-wasm.json  worker-browser-48k-stereo-wasm.json  worker-offload-48k-stereo-simd.json  worker-offload-48k-stereo-wasm.json  worker-resident-96k-auto-10s-amortized-native-release.json  worker-resident-96k-auto-10s-amortized-simd.json  worker-resident-96k-auto-10s-amortized-wasm.json
dsp/include/effetune/: abi.h  kernel.h  telemetry.h
dsp/include/effetune/dsp/: biquad.h  delay_line.h  halfband.h  linkwitz_riley.h  math.h  partitioned_convolver.h  smoothing.h  xorshift_rng.h
dsp/plugins/: golden-base-hash.json
dsp/plugins/analyzer/level_meter/: cases.json  kernel.cpp  params.json
dsp/plugins/analyzer/oscilloscope/: cases.json  kernel.cpp  params.json
dsp/plugins/analyzer/spectrogram/: kernel.cpp  native_test.cpp  params.json
dsp/plugins/analyzer/spectrum_analyzer/: cases.json  kernel.cpp  native_test.cpp  params.json
dsp/plugins/analyzer/stereo_meter/: cases.json  kernel.cpp  native_test.cpp  params.json
dsp/plugins/basics/: topology_native_test.cpp
dsp/plugins/basics/channel_divider/: cases.json  kernel.cpp  params.json
dsp/plugins/basics/dc_offset/: cases.json  kernel.cpp  params.json
dsp/plugins/basics/matrix/: cases.json  kernel.cpp  params.json
dsp/plugins/basics/multi_channel_panel/: cases.json  kernel.cpp  params.json
dsp/plugins/basics/mute/: cases.json  kernel.cpp  params.json
dsp/plugins/basics/polarity_inversion/: kernel.cpp  params.json
dsp/plugins/basics/stereo_balance/: cases.json  kernel.cpp  params.json
dsp/plugins/basics/volume/: cases.json  kernel.cpp  params.json
dsp/plugins/delay/delay/: cases.json  kernel.cpp  params.json
dsp/plugins/delay/time_alignment/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/: multiband_common.h  multiband_native_test.cpp  multiband_telemetry.h
dsp/plugins/dynamics/auto_leveler/: cases.json  group_b_telemetry.h  kernel.cpp  params.json
dsp/plugins/dynamics/brickwall_limiter/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/compressor/: cases.json  dynamics_common.h  kernel.cpp  params.json
dsp/plugins/dynamics/expander/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/gate/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/multiband_compressor/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/multiband_expander/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/multiband_transient/: cases.json  kernel.cpp  params.json
dsp/plugins/dynamics/power_amp_sag/: cases.json  kernel.cpp  native_test.cpp  params.json
dsp/plugins/dynamics/transient_shaper/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/band_pass_filter/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/comb_filter/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/earphone_cable_sim/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/fifteen_band_geq/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/fifteen_band_peq/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/five_band_dynamic_eq/: cases.json  kernel.cpp  native_test.cpp  params.json
dsp/plugins/eq/five_band_peq/: cases.json  kernel.cpp  params.json  peq_coefficients.h
dsp/plugins/eq/hi_pass_filter/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/lo_pass_filter/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/loudness_equalizer/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/narrow_range/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/room_eq/: cases.json  kernel.cpp  native_test.cpp  params.json
dsp/plugins/eq/tilt_eq/: cases.json  kernel.cpp  params.json
dsp/plugins/eq/tone_control/: cases.json  (+2 more)
dsp/plugins/resonator/: horn_native_test.cpp  horn_waveguide_common.h
dsp/plugins/reverb/: reverb_native_test.cpp
dsp/test/: abi_test.cpp  allocation_guard_probe.cpp  biquad_test.cpp  codegen_test.mjs  design_fft_test.cpp  dynamics_group_a_frame_test.cpp  dynamics_group_b_frame_test.cpp  halfband_test.cpp  level_meter_frame_test.cpp  oscilloscope_frame_test.cpp  parity_runner.cpp  partitioned_convolver_test.cpp  phase3b_group_b_descriptor_test.cpp  primitives_test.cpp  telemetry_test.cpp  test_kernel.cpp  test_main.cpp  test_support.h  wave3c_saturation_descriptor_test.cpp  wave3c_sub_synth_state_test.cpp
dsp/wasm/: no_entry.cpp
(+2179 files in other folders)
